# CMAKE_Template

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  define.cmake
.github/workflows/: cmake.yml
cmake_files/: setup.cmake
code_generation_templates/: version_info.hpp
libs/: CMakeLists.txt
scripts/: gen_version_info_cpp.sh
src/: main.cpp
